refactor: toList()를 사용하도록 변경 (#151)