@@ -39,8 +39,7 @@ public class EquipmentRoutineService {
                                          List<RoutineEquipmentRequest> routineRequests) {
 
         List<Short> sequences = routineRequests.stream()
-                .map(RoutineEquipmentRequest::getSequence)
-                .collect(Collectors.toList());
+                .map(RoutineEquipmentRequest::getSequence).toList();
 
         // valid한 sequence 값들로 이루어져 있는지 체크합니다.
         checkSequence(sequences);
@@ -140,36 +139,30 @@ public class EquipmentRoutineService {
     private List<EquipmentRoutine> extractRemoveTargets(UpdateRoutineRequest request, List<EquipmentRoutine> allByRoutine) {
         // 사용자가 Routine에서 제거한 Equipment들의 id List
         List<Long> equipmentIdList = request.getRemoveEquipments().stream()
-                .map(RemoveEquipmentRequest::getEquipmentId)
-                .collect(Collectors.toList());
+                .map(RemoveEquipmentRequest::getEquipmentId).toList();
 
         // allByRoutine을 순회하며 equipmentIdList에 들어있는 값과 대응되는 EquipmentRoutine List
         return allByRoutine.stream()
-                .filter(equipmentRoutine -> equipmentIdList.contains(equipmentRoutine.getEquipment().getId()))
-                .collect(Collectors.toList());
+                .filter(equipmentRoutine -> equipmentIdList.contains(equipmentRoutine.getEquipment().getId())).toList();
     }
 
     private List<Short> extractCurrentSequences(List<EquipmentRoutine> allByRoutine) {
         return allByRoutine.stream()
-                .map(EquipmentRoutine::getSequence)
-                .collect(Collectors.toList());
+                .map(EquipmentRoutine::getSequence).toList();
     }
 
     private List<Short> extractAddSequences(UpdateRoutineRequest request) {
         return request.getAddEquipments().stream()
-                .map(AddEquipmentRequest::getSequence)
-                .collect(Collectors.toList());
+                .map(AddEquipmentRequest::getSequence).toList();
     }
 
     private List<Short> extractRemoveSequences(UpdateRoutineRequest request, Routine routine) {
         List<EquipmentRoutine> equipmentRoutines = request.getRemoveEquipments().stream()
                 .map(r -> equipmentRoutineRepository.findByEquipmentIdAndRoutine(r.getEquipmentId(), routine)
-                        .orElseThrow(IllegalArgumentException::new))
-                .collect(Collectors.toList());
+                        .orElseThrow(IllegalArgumentException::new)).toList();
 
         return equipmentRoutines.stream()
-                .map(EquipmentRoutine::getSequence)
-                .collect(Collectors.toList());
+                .map(EquipmentRoutine::getSequence).toList();
     }
 
     private Map<Short, Short> generateSequenceMap(UpdateRoutineRequest request, Routine routine) {
