@@ -59,8 +59,7 @@ public class RoutineService {
         List<Routine> findRoutines = routineRepository.findAllByAuthority(authority);
 
         List<RoutineResponse> routines = findRoutines.stream()
-                .map(RoutineResponse::new)
-                .collect(Collectors.toList());
+                .map(RoutineResponse::new).toList();
 
         return RoutineListResponse.createResponse(routines);
     }
@@ -89,12 +88,10 @@ public class RoutineService {
         List<EquipmentRoutine> findEquipmentRoutines = equipmentRoutineRepository.findAllByRoutine(findRoutine);
 
         List<Equipment> findEquipments = findEquipmentRoutines.stream()
-                .map(EquipmentRoutine::getEquipment)
-                .collect(Collectors.toList());
+                .map(EquipmentRoutine::getEquipment).toList();
 
         List<RoutineDetailEquipmentResponse> equipments = findEquipments.stream()
-                .map(RoutineDetailEquipmentResponse::new)
-                .collect(Collectors.toList());
+                .map(RoutineDetailEquipmentResponse::new).toList();
 
         return RoutineDetailResponse.createResponse(findRoutine.getId(), findRoutine.getName(), equipments);
     }
